@@ -5,6 +5,7 @@
 - fix task manager not getting signaled.
 - allow --with-systemd to take a path arg.
 - fix WITH_LIBTIRPC function name.
+- fix ipv6 libtirpc getport.
 
 17/10/2013 autofs-5.0.8
 =======================
